# lydia

./: ACKNOWLEDGEMENTS  COPYING  LICENSE  Makefile.am  README  README-DEVELOPERS  bootstrap  cleanup  configure.ac  local.mk
common/: Makefile.am  array.c  array.h  common.ds  flat_kb.ct  flat_kb.ht  flat_kbconf.t  fprint.c  fprint.h  fread.c  fread.h  fscan.c  fscan.h  fwrite.c  fwrite.h  hash.c  hash.h  hierarchy.ct  hierarchy.ht  hierarchyconf.t  lcm.ct  lcm.ht  lcmconf.t  list.ct  list.ds  list.ht  listconf.t  md5.c  md5.h  mdd.ct  mdd.ht  mddconf.t  mv.ct  mv.ht  mvconf.t  obdd.ct  obdd.ht  obddconf.t  priority_queue.c  priority_queue.h  (+19 more)
cones/: Makefile.am  cones.c  cones.h
converters/cnf2dnf/: Makefile.am  cnf2dnf.c  cnf2dnf.h  main.c
converters/cnf2dnf/tests/: 2adder-strong.cnf  2adder-strong.dnf  2adder-strong.hcnf  2adder-strong.hdnf  2adder-weak.dnf  2adder-weak.hdnf  2inverters.cnf  2inverters.dnf  2inverters.hcnf  2inverters.hdnf  2subtractor.cnf  2subtractor.dnf  2subtractor.hcnf  2subtractor.hdnf  3inverters.cnf  3inverters.dnf  3inverters.hdnf  4inverters.cnf  4inverters.dnf  4inverters.hdnf  Makefile.am  cnf2dnf_tests.py  empty.cnf  empty.hdnf  polycell.cnf  polycell.dnf  polycell.hcnf  polycell.hdnf  realempty.cnf  realempty.hdnf  stress.xml  tests.xml
converters/cnf2horn/: Makefile.am  cnf2horn.c  cnf2horn.h  main.c
converters/cnf2horn/tests/: 2adder-weak.atms  2adder-weak.cnf  74181.atms  74181.cnf  74182.atms  74182.cnf  74283.atms  74283.cnf  74L85.atms  74L85.cnf  Makefile.am  cnf2horn_tests.py  tests.xml
converters/cnf2obdd/: Makefile.am  cnf2obdd.c  cnf2obdd.h  main.c
converters/cnf2obdd/tests/: Makefile.am  cnf2obdd_tests.py  tests.xml
converters/lcm2mvwff/: Makefile.am  fold.c  fold.h  lcm2mvwff.c  lcm2mvwff.h  main.c  normalize.c  normalize.h  walk.c  walk.h
converters/lcm2mvwff/tests/: 2inverters-mv.lcm  2inverters-mv.mvhwff  Makefile.am  inverter-mv.lcm  inverter-mv.mvhwff  issue133.lcm  issue133.mvhwff  issue41.lcm  issue41.mvhwff  issue42.lcm  issue42.mvhwff  issue47.lcm  issue47.mvhwff  issue81.lcm  issue81.mvhwff  lcm2mvwff_tests.py  mastermind-2x3.lcm  mastermind-2x3.mvhwff  mastermind-2x4.lcm  mastermind-2x4.mvhwff  mastermind-2x5.lcm  mastermind-2x5.mvhwff  mastermind-2x6.lcm  mastermind-2x6.mvhwff  mastermind-3x3.lcm  mastermind-3x3.mvhwff  mastermind-3x4.lcm  mastermind-3x4.mvhwff  mastermind-3x5.lcm  mastermind-3x5.mvhwff  mastermind-3x6.lcm  mastermind-3x6.mvhwff  mastermind-4x3.lcm  mastermind-4x3.mvhwff  mastermind-4x4.lcm  mastermind-4x4.mvhwff  mastermind-4x5.lcm  mastermind-4x5.mvhwff  mastermind-4x6.lcm  mastermind-4x6.mvhwff  (+9 more)
converters/lcm2wff/: Makefile.am  lcm2wff.c  lcm2wff.h  main.c  walk.c  walk.h
converters/lcm2wff/tests/: 10inverters.hwff  10inverters.lcm  2adder-strong.hwff  2adder-strong.lcm  2adder-weak.hwff  2adder-weak.lcm  2adder.lco  2adder.obs.hwff  2inverters.hwff  2inverters.lcm  2inverters.lco  2inverters.obs.hwff  2subtractor.hwff  2subtractor.lcm  2subtractor.lco  2subtractor.obs.hwff  3inverters.hwff  3inverters.lcm  3inverters.lco  3inverters.obs.hwff  4inverters.hwff  4inverters.lcm  4inverters.lco  4inverters.obs.hwff  74181.hwff  74181.lcm  74181.lco  74181.obs.hwff  74182.hwff  74182.lcm  74182.lco  74182.obs.hwff  74283.hwff  74283.lcm  74283.lco  74283.obs.hwff  74L85.hwff  74L85.lcm  74L85.lco  74L85.obs.hwff  (+24 more)
converters/mvcnf2tvcnf/: Makefile.am  mvcnf2tvcnf.c
converters/mvsmoothy/: Makefile.am  flatten_mvcnf.c  flatten_mvcnf.h  flatten_mvdnf.c  flatten_mvdnf.h  flatten_mvwff.c  flatten_mvwff.h  main.c  mvsmoothy.c  mvsmoothy.h
converters/mvwff2mvcnf/: Makefile.am  main.c  mvwff2mvcnf.c  mvwff2mvcnf.h
converters/mvwff2tvwff/: Makefile.am  mvwff2tvwff.c
converters/mvwff2tvwff/tests/: Makefile.am  inverter-mv.hwff  inverter-mv.mvhwff  issue133.hwff  issue133.mvhwff  issue81.hwff  issue81.mvhwff  mvwff2tvwff_tests.py  tests.xml
converters/obdd2dnf/: Makefile.am  main.c  obdd2dnf.c  obdd2dnf.h
converters/obdd2dnf/tests/: 10inverters.dnf  10inverters.obdd  2adder-strong.dnf  2adder-strong.obdd  copier.dnf  (+45 more)
converters/smoothy/: Makefile.am  inline.c  inline.h  main.c  simplify.c  simplify.h  smoothy.c  smoothy.h
converters/wff2cnf/: Makefile.am  main.c  wff2cnf.c  wff2cnf.h
converters/wff2nnf/: Makefile.am  tvnnf.c  tvnnf.h  wff2nnf.c
converters/wff2obdd/: Makefile.am  main.c  wff2obdd.c  wff2obdd.h
diag/: Makefile.am  diag.c  diag.h  obs.c  obs.h
encdec/: Makefile.am  card_sort_terms.c  card_sort_terms.h  dec.c  dec.h  dense.c  dense.h  enc.c  enc.h  sparse.c  sparse.h
graph/: Makefile.am  graph.c  graph.h  graphml.c  graphml.h
interface/: Makefile.am  lydia.c
io/: Makefile.am  io.c  io.h  lreadline.c  lreadline.h  pp_variable.c  pp_variable.h
lang/lc/: Makefile.am  applyexpr.c  applyexpr.h  array.c  array.h  ast.ct  ast.ds  ast.ht  astconf.t  attr.c  attr.h  dump.c  dump.h  error.c  error.h  evalbool.c  evalbool.h  evalenum.c  evalenum.h  evalfloat.c  evalfloat.h  evalint.c  evalint.h  expr.c  expr.h  iter.c  iter.h  lc.c  lc.h  lc_parser.h  lc_parser.y  lc_scanner.h  lc_scanner.l  lc_types.c  lc_types.h  main.c  rewrite.c  rewrite.h  search.c  search.h  (+8 more)
lang/oc/: Makefile.am  dump.c  dump.h  error.c  error.h  expr.c  expr.h  main.c  oc.ct  oc.ds  oc.ht  oc_parser.y  oc_scanner.h  oc_scanner.l  occonf.t  rewrite.c  rewrite.h  typeinfer.c  typeinfer.h
sat/: Makefile.am  sat.c  sat.h
sat/bcp/: Makefile.am  bcp.c  bcp.h  bcp_context.c  bcp_context.h
sat/lsss/: Makefile.am  lsss.c  lsss.h  lsss_context.c  lsss_context.h
sat/minisat/: Makefile.am  minisat.c  minisat.h  minisat_heap.hpp  minisat_main.cpp  minisat_main.hpp  minisat_sort.hpp  minisat_types.hpp
solvers/cdas/: Makefile.am  cdas.c  cdas.h  consistency.c  consistency.h  debug.c  debug.h  ds.c  ds.h  main.c
trie/: Makefile.am  trie.c  trie.h  trie_io.c  trie_io.h
trie/tests/: Makefile.am  trie_test.c  trie_tests.py
util/: Makefile.am  findbin.c  findbin.h  getopt.c  rand_nr.c  rand_nr.h  stat.c  stat.h  strdup.h  strndup.c  strndup.h  strnlen.c  strnlen.h  strsep.c  strsep.h  util.c  util.h
(+767 files in other folders)
