SUBDIRS             = common graph sat tms util trie io encdec diag cones \
                      converters solvers lang tools interface \
                      doc testsuite examples include components

EXTRA_DIST          = INSTALL README COPYING bootstrap .indent.pro.in

noinst_HEADERS      = include/defs.h

ACLOCAL_AMFLAGS     = -I m4

include $(top_srcdir)/local.mk
