noinst_LIBRARIES   = libgraph.a

libgraph_a_SOURCES = graph.h graph.c graphml.h graphml.c

AM_CPPFLAGS        = -I$(top_builddir)/common \
                     -I$(top_srcdir)/include \
                     -I$(top_srcdir)/common \
                     -I$(top_srcdir)/util

include $(top_srcdir)/local.mk
